--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,28 +10,20 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v6
-
-    - name: Install Nix
-      uses: cachix/install-nix-action@v31
-      with:
-        nix_path: nixpkgs=channel:nixos-unstable
-
-    - name: Magic Nix Cache
-      uses: DeterminateSystems/magic-nix-cache-action@main
-
+    - uses: actions/checkout@v6
+    - uses: DeterminateSystems/nix-installer-action@main
+    - uses: DeterminateSystems/magic-nix-cache-action@main
+    - uses: DeterminateSystems/flake-checker-action@main
     - name: Build WSL Tarball
       id: build
       run: |
-        nix build .#nixosConfigurations.thixos.config.system.build.tarball
-        cp result/nixos-wsl-x86_64-linux.tar.gz thixos.wsl
+        nix build ~/src/github.com/tteggel/.dotfiles#nixosConfigurations.thixos.config.system.build.tarball
+        mv result/nixos-wsl-x86_64-linux.tar.gz thixos.wsl
         echo "Build complete."
 
-    - name: Upload Artifact
-      uses: actions/upload-artifact@v6
+    - uses: actions/upload-artifact@v6
       with:
-        name: nixos-wsl-installer
+        name: thixos-wsl-installer
         path: thixos.wsl
         if-no-files-found: error
         
