--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,13 +11,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v6
+    
     - uses: DeterminateSystems/nix-installer-action@main
+    
     - uses: DeterminateSystems/magic-nix-cache-action@main
+
     - uses: DeterminateSystems/flake-checker-action@main
+    
     - name: Build WSL Tarball
       id: build
       run: |
-        nix build ~/src/github.com/tteggel/.dotfiles#nixosConfigurations.thixos.config.system.build.tarball
+        nix build .dotfiles#nixosConfigurations.thixos.config.system.build.tarball
         mv result/nixos-wsl-x86_64-linux.tar.gz thixos.wsl
         echo "Build complete."
 
