--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,14 +9,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
     - uses: actions/checkout@v6
     - uses: DeterminateSystems/determinate-nix-action@main
     - run: nix build .#nixosConfigurations.thixos.config.system.build.tarballBuilder
     - run: sudo ./result/bin/nixos-wsl-tarball-builder thixos.wsl
-    - uses: actions/upload-artifact@v6
+    - uses: anothrNick/github-tag-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DEFAULT_BUMP: patch
+        TAG_PREFIX: v
+    - uses: softprops/action-gh-release@v2
       with:
-        name: thixos-wsl-installer
-        path: thixos.wsl
-        if-no-files-found: error
-        
+        files: thixos.wsl
