--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,10 +17,12 @@ jobs:
     - run: nix build .#nixosConfigurations.thixos.config.system.build.tarballBuilder
     - run: sudo ./result/bin/nixos-wsl-tarball-builder thixos.wsl
     - uses: anothrNick/github-tag-action@master
+      id: tag
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEFAULT_BUMP: patch
         TAG_PREFIX: v
     - uses: softprops/action-gh-release@v2
       with:
+        tag_name: ${{ steps.tag.outputs.new_tag  }}
         files: thixos.wsl
