--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v6
     - uses: DeterminateSystems/determinate-nix-action@main
-    - run: |
-        root=$(sudo mktemp -d)
-        sudo mkdir -p $root/home/thom/src/github.com/tteggel
-        sudo git clone git@github.com:tteggel/.dotfiles.git $root/home/thom/src/github.com/tteggel/.dotfiles
-        nix run .#nixosConfigurations.thixos.config.system.build.tarballBuilder -- --extra-files $root --chown /home/thom 1000:100
+    - run: nix run .#nixosConfigurations.thixos.config.system.build.tarballBuilder
     - uses: anothrNick/github-tag-action@master
       id: tag
       env:
